--- a/cost_function.ipynb
+++ b/cost_function.ipynb
@@ -120,6 +120,30 @@
       "id": "7bs96CWrijxh"
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XYWPX_evgvYE",
+        "outputId": "b29fd0cb-967e-4789-d089-2fd006c607ea"
+      },
+      "id": "XYWPX_evgvYE",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "USZdMN1xijxi"
@@ -457,6 +481,7 @@
     "colab": {
       "name": "cost_function.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
